# HelloC

./: 5-5_wheat.c  CMakeLists.txt  README.md
C_Primer_Plus/Code/Chapter1/: concrete.c
C_Primer_Plus/Code/Chapter11/: String1.c
C_Primer_Plus/Code/Chapter2/: exercise01.c  exercise02.c  fathm_ft.c  first.c  nogoog.c  stillbad.c  two_func.c
C_Primer_Plus/Code/Chapter3/: 3-2_Print1.c  3-3_Bases.c  3-4_Print2.c  3-4_Toobig.c  3-5_Charcode.c  platinum.c
C_Primer_Plus/Code/Chapter4/: 4-10_Stringf.c  4-11_intconv.c  4-12_Floatcnv.c  4-13_Prntval.c  4-14_Longstrg.c  4-15_input.c  4-16_varwid.c  4-17_skip2.c  4-1_talkback.c  4-2_Praise1.c  4-3_Praise2.c  4-4_Pizza.c  4-5_Defines.c  4-6_Printout.c  4-7_Width.c  4-8_Floats.c  4-9_Flags.c  review.c
Chapter1/: HelloWord.c  dataTypes.c  static.c  variable.c
Chapter1/Choose/: ifDemo.c
Chapter1/Exercise/: BC6-Smallplane.c
Chapter1/Func/: func.c
Chapter1/Operators/: operators.c
Chapter1/Pointer/: pointer.c
Chapter1/String/: string01.c
Chapter1/Variable/: variable1.c  variable2.c  variable4.c
Chapter2/: IfDemo.c  SwitchDemo.c  WhileDemo.c
Chapter3/: Func.c  Func2.c
Chapter4/: Arr.c  Array1.c  Array2.c  ArrayExer.c
Chapter5/: 03_PointerTest2.c
Chapter7/: 01_Structure.c  03_StructTest.c  04_StructTest.c  06_StructArray.c
Classes/Chapter2/: ForDemo.c  IfDemo.c  WhileDemo.c
Classes/Chapter3/: Func2.c
Classes/Chapter5/: 01_Pointer.c  01_PointerTest.c  02_PointerTest.c  04_PointerTest3.c
Classes/Chapter7/: 02_Struct.c  05_StructTest.c  06_StructArray.c
Embedded/8051/: 1-Led.c  2-Led.c  3-Led.c  4-BEEP.c
(+15 files in other folders)
